--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -8,34 +8,34 @@ markup=none
 
 [mediaplayer]
 label=
-command=$HOME/scripts/mediaplayer
+command=$HOME/.config/i3blocks/mediaplayer
 instance=spotify
 interval=1
 signal=10
 #color=#FF4971
 
 [music]
-command=$HOME/scripts/music.sh
+command=$HOME/.config/i3blocks/music.sh
 interval=1
 
 [status]
-command=$HOME/scripts/wifi.sh
+command=$HOME/.config/i3blocks/wifi.sh
 interval=10
 #color=#18E3C8
 
 [volume]
 label=
-command=$HOME/scripts/volume.sh
+command=$HOME/.config/i3blocks/volume.sh
 interval=1
 #color=#FF8037
 
 [battery]
-command=$HOME/scripts/battery.sh
+command=$HOME/.config/i3blocks/battery.sh
 interval=30
 #color=#556FFF
 
 [light]
-command=$HOME/scripts/light.sh
+command=$HOME/.config/i3blocks/light.sh
 interval=1
 
 [time]
